fixed header spacing

--- a/Skin/skin.css
+++ b/Skin/skin.css
@@ -1588,7 +1588,8 @@ tr td.footer-numbers{
 	font-style: normal;
 	color: #444444;
 	font-size: 14pt;
-	margin: 30px 0 15px;}
+	margin: 30px 0 15px !important;}
+	
 .interior-body-type-no-banner h2{
 	font-style: normal;
 	color: #444444;
